tests/errors/sem.invalid-scope-access.run-directive.or
main :: () -> void {
    x := 10;
    @run {
        x = 5;
    };
};
